Added structured messages

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.1",
     "connect": "^3.4.1",
     "express": "^4.13.4",
+    "pug": "^2.0.0-alpha7",
     "request": "^2.72.0"
   }
 }
