--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect": "^3.4.1",
     "express": "^4.13.4",
     "pug": "^2.0.0-alpha7",
+    "regex": "^0.1.1",
     "request": "^2.72.0"
   }
 }
